定備設計の追加/要件定義の更新

--- a/docs/要件定義書.md
+++ b/docs/要件定義書.md
@@ -3,86 +3,338 @@
 ## 1. 概要
 
 ### 1.1. 目的
+
 本システムは、対話形式のインターフェースを通じて、ユーザーがより手軽に、かつ実践的な英語表現を学ぶ機会を提供することを目的とします。ユーザーが特定の状況やニュアンスに応じた複数の表現を比較・学習し、音声を通じて発音を確認しながら、効率的に語彙力と表現力を向上させることを目指します。
 
 ### 1.2. システム概要
-本システムは、AIチャットボットとの対話を通じて英語を学習するアプリケーションです。ユーザーが学びたい内容を日本語または英語で入力すると、AIが関連する3つほどの英語表現を提案します。各表現には、音声再生機能とブックマーク機能が付随しており、ユーザーは発音の確認や後で復習するための保存が可能です。
+
+本システムは、AI チャットボットとの対話を通じて英語を学習するアプリケーションです。ユーザーが学びたい内容を日本語または英語で入力すると、AI が関連する 3 つほどの英語表現を提案します。各表現には、音声再生機能とブックマーク機能が付随しており、ユーザーは発音の確認や後で復習するための保存が可能です。
 
 ## 2. 機能要件
 
 ### 2.1. 機能一覧
-| 大項目 | 小項目 | 概要 |
-| :--- | :--- | :--- |
-| **チャット機能** | メッセージ送受信 | AIとユーザーがテキストメッセージを送受信できる。 |
-| | 英語表現の提案 | ユーザーの入力に対し、AIが3つほどの英語表現を個別の吹き出しで返信する。 |
-| **音声再生機能** | 音声再生 | 提案された英語表現の横にある音声アイコンをタップすると、その英文の音声が再生される。 |
-| **ブックマーク機能** | ブックマーク登録 | 提案された英語表現をブックマークし、「ブックマーク英語一覧」に保存する。 |
-| | ブックマーク一覧表示 | ブックマークした英語表現を一覧で確認できる。 |
-| | ブックマーク削除 | ブックマークした英語表現を一覧から削除する。削除時には確認モーダルを表示する。 |
+
+| 大項目               | 小項目               | 概要                                                                                 |
+| :------------------- | :------------------- | :----------------------------------------------------------------------------------- |
+| **チャット機能**     | メッセージ送受信     | AI とユーザーがテキストメッセージを送受信できる。                                    |
+|                      | 英語表現の提案       | ユーザーの入力に対し、AI が 3 つほどの英語表現を個別の吹き出しで返信する。           |
+| **音声再生機能**     | 音声再生             | 提案された英語表現の横にある音声アイコンをタップすると、その英文の音声が再生される。 |
+| **ブックマーク機能** | ブックマーク登録     | 提案された英語表現をブックマークし、「ブックマーク英語一覧」に保存する。             |
+|                      | ブックマーク一覧表示 | ブックマークした英語表現を一覧で確認できる。                                         |
+|                      | ブックマーク削除     | ブックマークした英語表現を一覧から削除する。削除時には確認モーダルを表示する。       |
 
 ### 2.2. 機能詳細
 
 #### 2.2.1. チャット画面
-*   **画面レイアウト:**
-    *   一般的なチャットアプリケーションと同様のUI（上から下にメッセージが流れる形式）とします。
-    *   AIからのメッセージとユーザーからのメッセージは、吹き出しの色や配置で明確に区別できるようにします。
-*   **初期表示:**
-    *   画面を開くと、AIから学習を促すようなウェルカムメッセージが1件表示されます。
-    *   画面下部には、ユーザーがメッセージを入力するためのテキストボックスと送信ボタンを配置します。
-*   **メッセージ送信:**
-    *   ユーザーはテキストボックスに学びたい内容（例：「お疲れ様です」の英語表現、「会議で使えるフレーズ」など）を入力し、送信します。
+
+- **画面レイアウト:**
+  - 一般的なチャットアプリケーションと同様の UI（上から下にメッセージが流れる形式）とします。
+  - AI からのメッセージとユーザーからのメッセージは、吹き出しの色や配置で明確に区別できるようにします。
+- **初期表示:**
+  - 画面を開くと、AI から学習を促すようなウェルカムメッセージが 1 件表示されます。
+  - 画面下部には、ユーザーがメッセージを入力するためのテキストボックスと送信ボタンを配置します。
+- **メッセージ送信:**
+  - ユーザーはテキストボックスに学びたい内容（例：「お疲れ様です」の英語表現、「会議で使えるフレーズ」など）を入力し、送信します。
 
 #### 2.2.2. 英語表現の提案
-*   **AIの応答:**
-    *   ユーザーからのメッセージに対し、AIは関連する3つほどの英語表現を生成します。
-    *   各英語表現は、それぞれ独立した吹き出しで表示されます。
-*   **吹き出しの要素:**
-    *   各吹き出しには、以下の要素を含みます。
-        1.  **英語表現テキスト:** AIが提案する英文。
-        2.  **音声アイコン:** タップすると音声が再生されるアイコン。
-        3.  **ブックマークアイコン:** タップするとブックマーク登録・解除ができるアイコン。
+
+- **AI の応答:**
+  - ユーザーからのメッセージに対し、AI は関連する 3 つほどの英語表現を生成します。
+  - 各英語表現は、それぞれ独立した吹き出しで表示されます。
+- **吹き出しの要素:**
+  - 各吹き出しには、以下の要素を含みます。
+    1.  **英語表現テキスト:** AI が提案する英文。
+    2.  **音声アイコン:** タップすると音声が再生されるアイコン。
+    3.  **ブックマークアイコン:** タップするとブックマーク登録・解除ができるアイコン。
 
 #### 2.2.3. 音声再生機能
-*   **トリガー:** 英語表現の吹き出しに表示されている「音声アイコン」をユーザーがタップ（クリック）すること。
-*   **処理:**
-    *   アイコンがタップされると、該当する英語表現のテキストを音声に変換し、再生します。
-    *   音声再生中であることが視覚的にわかるようなフィードバック（例：アイコンのデザイン変更）があると望ましいです。
+
+- **トリガー:** 英語表現の吹き出しに表示されている「音声アイコン」をユーザーがタップ（クリック）すること。
+- **処理:**
+  - アイコンがタップされると、該当する英語表現のテキストを音声に変換し、再生します。
+  - 音声再生中であることが視覚的にわかるようなフィードバック（例：アイコンのデザイン変更）があると望ましいです。
 
 #### 2.2.4. ブックマーク登録機能
-*   **トリガー:** 英語表現の吹き出しに表示されている「ブックマークアイコン」をユーザーがタップ（クリック）すること。
-*   **処理:**
-    *   アイコンがタップされると、該当の英語表現が「ブックマーク英語一覧」に保存されます。
-    *   ブックマーク登録後は、アイコンのデザインを変更し、登録済みであることをユーザーに示します（例：白抜きのアイコンから塗りつぶしのアイコンへ）。
-    *   再度アイコンをタップすると、ブックマークが解除されます。
+
+- **トリガー:** 英語表現の吹き出しに表示されている「ブックマークアイコン」をユーザーがタップ（クリック）すること。
+- **処理:**
+  - アイコンがタップされると、該当の英語表現が「ブックマーク英語一覧」に保存されます。
+  - ブックマーク登録後は、アイコンのデザインを変更し、登録済みであることをユーザーに示します（例：白抜きのアイコンから塗りつぶしのアイコンへ）。
+  - 再度アイコンをタップすると、ブックマークが解除されます。
 
 #### 2.2.5. ブックマーク一覧画面
-*   **アクセス:** ヘッダーメニューなど、常にアクセスしやすい場所に「ブックマーク一覧」への導線を設けます。
-*   **表示内容:**
-    *   ユーザーがブックマークした英語表現をリスト形式で表示します。
-    *   各項目には、英語表現、音声アイコン、削除ボタンが含まれます。
-*   **機能:**
-    *   一覧画面からも各英語表現の音声再生が可能です。
+
+- **アクセス:** ヘッダーメニューなど、常にアクセスしやすい場所に「ブックマーク一覧」への導線を設けます。
+- **表示内容:**
+  - ユーザーがブックマークした英語表現をリスト形式で表示します。
+  - 各項目には、英語表現、音声アイコン、削除ボタンが含まれます。
+- **機能:**
+  - 一覧画面からも各英語表現の音声再生が可能です。
 
 #### 2.2.6. ブックマーク削除機能
-*   **トリガー:** ブックマーク一覧画面で、各英語表現の横にある「削除ボタン」をユーザーがタップ（クリック）すること。
-*   **処理:**
-    *   削除ボタンがタップされると、「このブックマークを削除しますか？」といった確認メッセージを含むモーダルウィンドウを表示します。
-    *   モーダルには「はい（削除）」と「いいえ（キャンセル）」の選択肢を設けます。
-    *   「はい」が選択された場合、対象のブックマークをリストから削除し、一覧を更新します。
-    *   「いいえ」が選択された場合、モーダルを閉じて何も行いません。
 
-## 3. 非機能要件
+- **トリガー:** ブックマーク一覧画面で、各英語表現の横にある「削除ボタン」をユーザーがタップ（クリック）すること。
+- **処理:**
+  - 削除ボタンがタップされると、「このブックマークを削除しますか？」といった確認メッセージを含むモーダルウィンドウを表示します。
+  - モーダルには「はい（削除）」と「いいえ（キャンセル）」の選択肢を設けます。
+  - 「はい」が選択された場合、対象のブックマークをリストから削除し、一覧を更新します。
+  - 「いいえ」が選択された場合、モーダルを閉じて何も行いません。
 
-### 3.1. UI/UX要件
-*   **操作性:** ユーザーが直感的に操作できる、シンプルで分かりやすいデザインを採用します。
-*   **視認性:** テキストやアイコンは、十分なサイズとコントラストを確保し、視認性を高めます。
-*   **レスポンシブデザイン:** PC、タブレット、スマートフォンなど、様々なデバイスの画面サイズで最適に表示・操作できるよう対応します。
+## 3. 技術要件
 
-### 3.2. パフォーマンス要件
-*   **応答速度:** ユーザーがメッセージを送信してから、AIが応答を返すまでの時間は3秒以内を目標とします。
-*   **音声再生:** 音声アイコンをタップしてから、音声が再生されるまでの遅延を最小限に抑えます。
+### 3.1. 技術スタック
 
-### 3.3. 対応環境
-*   **Webブラウザ:** 最新版のGoogle Chrome, Safari, Firefox, Microsoft Edgeに対応します。
+#### 3.1.1. フロントエンド・バックエンド
+
+- **Next.js 15**: React ベースのフルスタックフレームワーク
+  - サーバーサイドレンダリング（SSR）とスタティック生成（SSG）をサポート
+  - App Router を使用したモダンなルーティング
+  - **Server Actions**: サーバーサイド処理を直接コンポーネントから実行
+  - TypeScript による型安全な開発
+
+#### 3.1.2. データベース・認証
+
+- **Supabase**: オープンソースの Firebase 代替サービス
+  - **認証機能**: ユーザー登録・ログイン・セッション管理
+  - **PostgreSQL データベース**: ブックマークデータの永続化
+  - **リアルタイム API**: データベースの変更をリアルタイムで反映
+  - **Row Level Security (RLS)**: ユーザーごとのデータアクセス制御
+
+#### 3.1.3. AI 機能
+
+- **Vercel AI SDK**: AI チャットボット機能の実装
+  - OpenAI GPT モデルとの連携
+  - ストリーミング対応による高速な応答
+  - 英語表現の生成と提案機能
+
+#### 3.1.4. 音声機能
+
+- **Web Speech API**: ブラウザ標準の音声合成機能
+  - Text-to-Speech による英語表現の音声再生
+  - クロスブラウザ対応
+
+#### 3.1.5. デプロイメント
+
+- **Vercel**: 本番環境のホスティング
+  - 継続的デプロイメント（CI/CD）
+  - エッジネットワークによる高速配信
+  - 環境変数管理とセキュリティ
+
+### 3.2. システムアーキテクチャ
+
+#### 3.2.1. 全体構成
+
+```
+[ユーザー（ブラウザ）]
+    ↓
+[Next.js App Router + Server Actions]
+    ↓                    ↓
+[Vercel AI SDK] → [OpenAI API]
+    ↓
+[Supabase Client]
+    ↓
+[PostgreSQL データベース]
+```
+
+#### 3.2.2. データフロー
+
+1. **チャット機能**: ユーザー入力 → Server Action → AI SDK → OpenAI → 英語表現生成 → クライアント表示
+2. **ブックマーク機能**: ユーザー操作 → Server Action → Supabase Client → PostgreSQL
+3. **認証機能**: ユーザー認証 → Supabase Auth → Server Action → セッション管理
+
+#### 3.2.3. Server Actions の活用
+
+- **ブックマーク登録/削除**: `bookmarkAction()` でデータベース操作を実行
+- **AI チャット処理**: `chatAction()` で OpenAI API 呼び出しとストリーミング
+- **認証処理**: `authAction()` で Supabase Auth との連携
+
+#### 3.2.4. 技術選定理由
+
+**Next.js を選択した理由:**
+
+- フルスタック開発が可能で、Server Actions により型安全なサーバー処理を実現
+- Vercel との親和性が高く、デプロイが簡単
+- React エコシステムの恩恵を受けられる
+
+**Server Actions を選択した理由:**
+
+- API Routes よりもシンプルで直感的な実装が可能
+- TypeScript による型安全性がクライアント・サーバー間で保証される
+- フォーム送信とデータ変更処理が統合され、開発効率が向上
+- 自動的な再検証（revalidation）によりデータの整合性を維持
+
+**Supabase を選択した理由:**
+
+- 認証機能が標準で提供され、実装コストが低い
+- PostgreSQL ベースで SQL の知識を活用できる
+- リアルタイム機能により、将来的な拡張に対応可能
+
+**Vercel AI SDK を選択した理由:**
+
+- Next.js との統合が容易
+- ストリーミング対応により、ユーザー体験が向上
+- OpenAI 以外の AI プロバイダーにも対応可能
+
+**Vercel を選択した理由:**
+
+- Next.js の開発元であり、最適化された環境
+- 環境変数管理やプレビューデプロイが充実
+- CDN による高速配信
+
+### 3.3. データベース設計
+
+#### 3.3.1. テーブル構成
+
+**users テーブル（Supabase Auth 管理）**
+
+- id: UUID（主キー）
+- email: VARCHAR
+- created_at: TIMESTAMP
+
+**bookmarks テーブル**
+
+- id: UUID（主キー）
+- user_id: UUID（外部キー：users.id）
+- english_text: TEXT（ブックマークした英語表現）
+- created_at: TIMESTAMP
+- updated_at: TIMESTAMP
+
+#### 3.3.2. セキュリティポリシー
+
+- Row Level Security (RLS) を有効化
+- ユーザーは自分のブックマークのみアクセス可能
+- 認証されていないユーザーはデータアクセス不可
+
+## 4. 非機能要件
+
+### 4.1. UI/UX 要件
+
+- **操作性:** ユーザーが直感的に操作できる、シンプルで分かりやすいデザインを採用します。
+- **視認性:** テキストやアイコンは、十分なサイズとコントラストを確保し、視認性を高めます。
+- **レスポンシブデザイン:** PC、タブレット、スマートフォンなど、様々なデバイスの画面サイズで最適に表示・操作できるよう対応します。
+
+### 4.2. パフォーマンス要件
+
+- **応答速度:** ユーザーがメッセージを送信してから、AI が応答を返すまでの時間は 3 秒以内を目標とします。
+- **音声再生:** 音声アイコンをタップしてから、音声が再生されるまでの遅延を最小限に抑えます。
+- **ページ読み込み:** 初回ページ読み込み時間は 2 秒以内を目標とします。
+- **データベースアクセス:** Supabase への API コール応答時間は 1 秒以内を目標とします。
+
+### 4.3. 対応環境
+
+- **Web ブラウザ:** 最新版の Google Chrome, Safari, Firefox, Microsoft Edge に対応します。
+- **モバイルデバイス:** iOS Safari、Android Chrome での動作を保証します。
+
+### 4.4. セキュリティ要件
+
+- **認証:** Supabase Auth による安全なユーザー認証
+- **データ保護:** Row Level Security (RLS) によるデータアクセス制御
+- **通信暗号化:** HTTPS による通信の暗号化
+- **環境変数:** API キーやシークレット情報の適切な管理
+
+## 5. デプロイメント要件
+
+### 5.1. 本番環境
+
+- **ホスティング:** Vercel でのホスティング
+- **ドメイン:** カスタムドメインの設定
+- **SSL 証明書:** 自動発行・更新
+
+### 5.2. 開発・ステージング環境
+
+- **プレビューデプロイ:** プルリクエストごとのプレビュー環境自動作成
+- **環境分離:** 本番・ステージング・開発環境の明確な分離
+
+### 5.3. CI/CD パイプライン
+
+- **自動デプロイ:** Git push による自動デプロイ
+- **ビルドチェック:** TypeScript コンパイルエラーの自動検出
+- **環境変数管理:** Vercel による環境変数の安全な管理
+
+## 6. 開発要件
+
+### 6.1. 開発環境セットアップ
+
+```bash
+# プロジェクトのクローン
+git clone <repository-url>
+cd practice-english-chat
+
+# 依存関係のインストール
+npm install
+
+# 環境変数の設定
+cp .env.example .env.local
+
+# 開発サーバーの起動
+npm run dev
+```
+
+### 6.2. 必要な環境変数
+
+```bash
+# Supabase 設定
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# OpenAI API 設定
+OPENAI_API_KEY=your_openai_api_key
+
+# Vercel 設定（本番環境）
+VERCEL_URL=your_vercel_url
+```
+
+### 6.3. パッケージ構成
+
+```json
+{
+  "dependencies": {
+    "next": "^15.0.0",
+    "@supabase/supabase-js": "^2.0.0",
+    "ai": "^3.0.0",
+    "openai": "^4.0.0",
+    "react": "^18.0.0",
+    "typescript": "^5.0.0"
+  }
+}
+```
+
+### 6.4. Server Actions 実装例
+
+```typescript
+// app/actions/bookmark.ts
+"use server";
+
+import { createClient } from "@/lib/supabase";
+import { revalidatePath } from "next/cache";
+
+export async function bookmarkAction(englishText: string) {
+  const supabase = createClient();
+
+  const { data, error } = await supabase
+    .from("bookmarks")
+    .insert({ english_text: englishText });
+
+  if (error) throw error;
+
+  revalidatePath("/bookmarks");
+  return data;
+}
+
+// app/actions/chat.ts
+("use server");
+
+import { openai } from "ai/openai";
+import { streamText } from "ai";
+
+export async function chatAction(message: string) {
+  const result = await streamText({
+    model: openai("gpt-4"),
+    messages: [{ role: "user", content: message }],
+  });
+
+  return result.toAIStreamResponse();
+}
+```
 
 ---
